--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     Оставьте свои данные, мы вам перезвоним
                                 </p>
                                 <!-- Содержимое модального окна -->
-                                <div class="modal-input-div">
+                                <div>
                                     <ul class="modal-input">
                                         <li>
                                             <div class="modal-input-text">Имя</div>
