--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <ul class="contacts-nav">
                         <li>
                             <a href="mailto:info@devstudio.com">
-                                <svg class="link-icon icon-email">
+                                <svg class="link-icon icon-email" width="16px" height="12px">
                                     <use href="./images/icons/sprite.svg#icon-message"></use>
                                 </svg>
                                 info@devstudio.com
@@ -42,7 +42,7 @@
                         </li>
                         <li>
                             <a href="tel:+380961111111">
-                                <svg class="link-icon icon-smartphone">
+                                <svg class="link-icon icon-smartphone" width="10px" height="16px">
                                     <use href="./images/icons/sprite.svg#icon-smartphone"></use>
                                 </svg>
                                 +38 096 111 11 11
