--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <!-- Логотип страницы -->
                 <a href="./index.html" class="logo">Web<span>Studio</span></a>
                 <!-- Навигация страницы -->
-                <nav class="main-nav">
+                <nav class="main-nav"> 
                     <ul class="site-nav">
                         <li>
                             <a href="./index.html" class="link current">Студия</a>
@@ -27,14 +27,14 @@
                             <a href="./portfolio.html" class="link">Портфолио</a>
                         </li>
                         <li>
-                            <a href="" class="link">Контакты</a>
+                            <a href="#" class="link">Контакты</a>
                         </li>
                     </ul>
-                    <!-- Контакты -->
+                <!-- Контакты -->
                     <ul class="contacts-nav">
                         <li>
                             <a href="mailto:info@devstudio.com">
-                                <svg class="link-icon icon-email" width="16px" height="12px">
+                                <svg class="link-icon icon-email">
                                     <use href="./images/icons/sprite.svg#icon-message"></use>
                                 </svg>
                                 info@devstudio.com
@@ -42,7 +42,7 @@
                         </li>
                         <li>
                             <a href="tel:+380961111111">
-                                <svg class="link-icon icon-smartphone" width="10px" height="16px">
+                                <svg class="link-icon icon-smartphone">
                                     <use href="./images/icons/sprite.svg#icon-smartphone"></use>
                                 </svg>
                                 +38 096 111 11 11
